# opal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_agent.py  run_agent_async.py  system_improve_todo.txt  trajectory_viewer.py
.retriever_cache/0188031319b36588e59cff967c33cbfda0a2fdd4451f154a8b4ce57dd257454a/: documents.json  embeddings.npy
.retriever_cache/02484200fcdc15d7eee6eeb04a17d41974082fea3f32b539462cd792b97a1df1/: documents.json  embeddings.npy
.retriever_cache/028ea13bef46253d15d0f051d23ae33c684faabe4bdcfab6730aa74e35a0e40a/: documents.json  embeddings.npy
.retriever_cache/06b688c78a82826fac054ca0f276dfb46fd450baf90c143c65daf7d33c802bf2/: documents.json  embeddings.npy
.retriever_cache/0bde23b16cd469f3426077c608a7b3394397cda7528839ff1cdcda699e1f8c1d/: documents.json  embeddings.npy
.retriever_cache/0d4e00ae23454e975af3868f36f3b8c00351d481f287b147a4d31f3c87f8f75e/: documents.json  embeddings.npy
.retriever_cache/0fea8f16fcb1d19c6f00db513e983a6bb0e95a077af5131fcec8451540cb04b2/: documents.json  embeddings.npy
.retriever_cache/15e509db442831f23eda46f050a326281c56b15ae6e6fe28cd5d64544ecadfe9/: documents.json  embeddings.npy
.retriever_cache/18a4a3e1af7001e334f976c4d180a7b9861376c7d3a0a158cf908f00ee0e3b39/: documents.json  embeddings.npy
.retriever_cache/1d0be2286b8dfff6d05cca823c1bcde5e9d83f6e92a4075daf3bbd5634a2b7b4/: documents.json  embeddings.npy
.retriever_cache/1d575c418a15388b25cf3c1db2991e743f403dd3fc0f1e2b44ec4a3fe8a3e957/: documents.json  embeddings.npy
docs/: Agentic_design.md
finance_bench/: README.md  eval.py  gpt4o_experiment_report.md  gpt4o_experiment_report_v2.md  run.py  utils.py  visualize_results.py
finance_bench/configs/: default.yaml  naive_search.yaml  single_turn_qa.yaml
llm_agents/: __init__.py  runner.py
opal/: __init__.py  config.py  run_agent.py  runner.py
(+226 files in other folders)
