[project]
name = "llm-agents"
version = "0.1.0"
description = "Experimental code for LLM-based agentic design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "ddgs>=6.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "pandas-stubs~=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["llm_agents*"]

[tool.setuptools.package-data]
"*" = ["*.txt"]
