[project]
name = "opal"
version = "0.1.0"
description = "Experimental code for LLM-based agentic design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "ddgs>=6.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "pandas-stubs~=3.0.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "sentence-transformers>=3.0.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["opal*"]

[tool.setuptools.package-data]
"*" = ["*.txt"]
